--- a/ML2022_term_project.ipynb
+++ b/ML2022_term_project.ipynb
@@ -18,19 +18,25 @@
     "# imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import itertools\n",
+    "\n",
+    "# sklearn models\n",
     "from sklearn.model_selection import cross_validate,cross_val_score, train_test_split\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression,BayesianRidge\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier\n",
     "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier"
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n",
+    "\n",
+    "\n",
+    "#Feature selection imports\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif"
    ]
   },
   {
@@ -74,156 +80,36 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>class4</th>\n",
-       "      <th>partlybad</th>\n",
-       "      <th>CO2168.mean</th>\n",
-       "      <th>CO2168.std</th>\n",
-       "      <th>CO2336.mean</th>\n",
-       "      <th>CO2336.std</th>\n",
-       "      <th>CO242.mean</th>\n",
-       "      <th>CO242.std</th>\n",
-       "      <th>...</th>\n",
-       "      <th>T672.std</th>\n",
-       "      <th>T84.mean</th>\n",
-       "      <th>T84.std</th>\n",
-       "      <th>UV_A.mean</th>\n",
-       "      <th>UV_A.std</th>\n",
-       "      <th>UV_B.mean</th>\n",
-       "      <th>UV_B.std</th>\n",
-       "      <th>CS.mean</th>\n",
-       "      <th>CS.std</th>\n",
-       "      <th>class2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2000-01-17</td>\n",
-       "      <td>Ib</td>\n",
-       "      <td>False</td>\n",
-       "      <td>368.771711</td>\n",
-       "      <td>0.310309</td>\n",
-       "      <td>368.665658</td>\n",
-       "      <td>0.305127</td>\n",
-       "      <td>369.371184</td>\n",
-       "      <td>0.333606</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.250952</td>\n",
-       "      <td>-0.899393</td>\n",
-       "      <td>0.271648</td>\n",
-       "      <td>2.492491</td>\n",
-       "      <td>1.310880</td>\n",
-       "      <td>0.031587</td>\n",
-       "      <td>0.018122</td>\n",
-       "      <td>0.000243</td>\n",
-       "      <td>0.000035</td>\n",
-       "      <td>event</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2000-02-28</td>\n",
-       "      <td>nonevent</td>\n",
-       "      <td>False</td>\n",
-       "      <td>378.197295</td>\n",
-       "      <td>1.001493</td>\n",
-       "      <td>378.083089</td>\n",
-       "      <td>1.025472</td>\n",
-       "      <td>378.671311</td>\n",
-       "      <td>1.017208</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.313460</td>\n",
-       "      <td>2.033191</td>\n",
-       "      <td>0.271090</td>\n",
-       "      <td>0.295937</td>\n",
-       "      <td>0.177836</td>\n",
-       "      <td>0.005140</td>\n",
-       "      <td>0.003552</td>\n",
-       "      <td>0.003658</td>\n",
-       "      <td>0.000940</td>\n",
-       "      <td>nonevent</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 105 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id        date    class4  partlybad  CO2168.mean  CO2168.std  CO2336.mean  \\\n",
-       "0   1  2000-01-17        Ib      False   368.771711    0.310309   368.665658   \n",
-       "1   2  2000-02-28  nonevent      False   378.197295    1.001493   378.083089   \n",
-       "\n",
-       "   CO2336.std  CO242.mean  CO242.std  ...  T672.std  T84.mean   T84.std  \\\n",
-       "0    0.305127  369.371184   0.333606  ...  0.250952 -0.899393  0.271648   \n",
-       "1    1.025472  378.671311   1.017208  ...  0.313460  2.033191  0.271090   \n",
-       "\n",
-       "   UV_A.mean  UV_A.std  UV_B.mean  UV_B.std   CS.mean    CS.std    class2  \n",
-       "0   2.492491  1.310880   0.031587  0.018122  0.000243  0.000035     event  \n",
-       "1   0.295937  0.177836   0.005140  0.003552  0.003658  0.000940  nonevent  \n",
-       "\n",
-       "[2 rows x 105 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size: 310 Test size: 154\n"
+     ]
     }
    ],
    "source": [
-    "npf.head(n=2)"
+    "npf.head(n=2)\n",
+    "train, test = train_test_split(npf,test_size=0.33, random_state=42)\n",
+    "print(\"Train size:\", len(train),\"Test size:\", len(test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1adc3fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = ['CO2168.mean','Glob.mean','H2O168.mean','NET.mean', 'NO168.mean',\n",
-    "'NOx168.mean','O3168.mean','Pamb0.mean','PAR.mean', 'PTG.mean',\n",
-    "'RGlob.mean', 'RHIRGA168.mean','RPAR.mean', 'SO2168.mean',\n",
-    "'SWS.mean', 'T168.mean','UV_A.mean', 'UV_B.mean', 'CS.mean']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "b327b8b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#X = npf[labels]\n",
-    "X = npf.filter(regex=\".mean\")\n",
-    "y = npf[\"class2\"]"
+    "X = train.filter(regex=\".mean\")\n",
+    "y = train[\"class2\"]\n",
+    "X_test = test.filter(regex=\".mean\")\n",
+    "y_test = test[\"class2\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "41ed42b0",
    "metadata": {},
    "outputs": [],
@@ -242,12 +128,12 @@
     "                    \"DecisionTree\"]\n",
     "\n",
     "\n",
-    "models = [DummyClassifier(),\n",
+    "classifiers = [DummyClassifier(),\n",
     "          LogisticRegression(solver=\"saga\"),\n",
     "          GaussianNB(),\n",
-    "          SVC(),\n",
-    "          SVC(kernel=\"sigmoid\"),\n",
-    "          SVC(kernel=\"poly\"),\n",
+    "          SVC(probability=True),\n",
+    "          SVC(kernel=\"sigmoid\",probability=True),\n",
+    "          SVC(kernel=\"poly\",probability=True),\n",
     "          RandomForestClassifier(),\n",
     "          AdaBoostClassifier(),\n",
     "          KNeighborsClassifier(3),\n",
@@ -255,7 +141,18 @@
     "          QuadraticDiscriminantAnalysis(),\n",
     "          DecisionTreeClassifier(max_depth=5)\n",
     "          ]\n",
+    "models = [Pipeline([(\"feature_selection\",SelectKBest(f_classif, k = 10)),(\"classifier\",c)]) for c in classifiers]\n",
     "res = pd.DataFrame(index=Classifier_Names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7b93301f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perplexity = lambda p: np.exp(-np.mean(np.log((test[\"class2\"]!=\"nonevent\").astype(int)*p + (1 - (test[\"class2\"]!=\"nonevent\").astype(int)) * (1 - p))))"
    ]
   },
   {
@@ -268,6 +165,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
       "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
       "  warnings.warn(\"The default value of strategy will change from \"\n",
       "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -289,13 +208,31 @@
       "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\"The max_iter was reached which means \"\n",
       "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n"
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "/usr/lib/python3/dist-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n",
+      "/usr/lib/python3/dist-packages/pandas/core/arraylike.py:364: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/usr/lib/python3/dist-packages/sklearn/linear_model/_sag.py:329: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "/usr/lib/python3/dist-packages/pandas/core/arraylike.py:364: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/usr/lib/python3/dist-packages/pandas/core/arraylike.py:364: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/usr/lib/python3/dist-packages/pandas/core/arraylike.py:364: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
      ]
     }
    ],
    "source": [
-    "res[\"cv\"] = [cross_val_score(m, X, y, cv=10).mean()\n",
-    "             for m in models]"
+    "res[\"train\"] = [m.fit(X,y).score(X,y) for m in models]\n",
+    "res[\"cv\"] = [cross_val_score(m, X, y, cv=10).mean() for m in models]\n",
+    "res[\"test\"] = [m.fit(X,y).score(X_test,y_test) for m in models]\n",
+    "res[\"perplexity\"] = [perplexity(m.fit(X,y).predict_proba(X_test)[:,1]) for m in models]"
    ]
   },
   {
@@ -325,76 +262,115 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>train</th>\n",
        "      <th>cv</th>\n",
+       "      <th>test</th>\n",
+       "      <th>perplexity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>dummyRegressor</th>\n",
-       "      <td>0.470074</td>\n",
+       "      <td>0.516129</td>\n",
+       "      <td>0.474194</td>\n",
+       "      <td>0.506494</td>\n",
+       "      <td>inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>logisticRegressor</th>\n",
-       "      <td>0.842831</td>\n",
+       "      <td>0.761290</td>\n",
+       "      <td>0.758065</td>\n",
+       "      <td>0.798701</td>\n",
+       "      <td>4.834991e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GaussianNaiveBays</th>\n",
-       "      <td>0.806383</td>\n",
+       "      <td>0.787097</td>\n",
+       "      <td>0.783871</td>\n",
+       "      <td>0.792208</td>\n",
+       "      <td>1.156793e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
-       "      <td>0.773913</td>\n",
+       "      <td>0.767742</td>\n",
+       "      <td>0.764516</td>\n",
+       "      <td>0.779221</td>\n",
+       "      <td>3.932640e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC-sigmoid</th>\n",
-       "      <td>0.763182</td>\n",
+       "      <td>0.732258</td>\n",
+       "      <td>0.622581</td>\n",
+       "      <td>0.779221</td>\n",
+       "      <td>3.644898e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC-poly</th>\n",
-       "      <td>0.780389</td>\n",
+       "      <td>0.751613</td>\n",
+       "      <td>0.745161</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>3.926238e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForest</th>\n",
-       "      <td>0.874931</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.787097</td>\n",
+       "      <td>0.818182</td>\n",
+       "      <td>inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AdaBoost</th>\n",
-       "      <td>0.853700</td>\n",
+       "      <td>0.929032</td>\n",
+       "      <td>0.777419</td>\n",
+       "      <td>0.824675</td>\n",
+       "      <td>2.229494e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NearestNeighbour</th>\n",
-       "      <td>0.803978</td>\n",
+       "      <td>0.874194</td>\n",
+       "      <td>0.777419</td>\n",
+       "      <td>0.759740</td>\n",
+       "      <td>inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GaussianProcess</th>\n",
-       "      <td>0.623358</td>\n",
+       "      <td>0.838710</td>\n",
+       "      <td>0.787097</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>6.741112e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QDA</th>\n",
-       "      <td>0.812766</td>\n",
+       "      <td>0.848387</td>\n",
+       "      <td>0.783871</td>\n",
+       "      <td>0.779221</td>\n",
+       "      <td>1.555342e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTree</th>\n",
-       "      <td>0.808326</td>\n",
+       "      <td>0.916129</td>\n",
+       "      <td>0.745161</td>\n",
+       "      <td>0.772727</td>\n",
+       "      <td>inf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         cv\n",
-       "dummyRegressor     0.470074\n",
-       "logisticRegressor  0.842831\n",
-       "GaussianNaiveBays  0.806383\n",
-       "SVC                0.773913\n",
-       "SVC-sigmoid        0.763182\n",
-       "SVC-poly           0.780389\n",
-       "RandomForest       0.874931\n",
-       "AdaBoost           0.853700\n",
-       "NearestNeighbour   0.803978\n",
-       "GaussianProcess    0.623358\n",
-       "QDA                0.812766\n",
-       "DecisionTree       0.808326"
+       "                      train        cv      test    perplexity\n",
+       "dummyRegressor     0.516129  0.474194  0.506494           inf\n",
+       "logisticRegressor  0.761290  0.758065  0.798701  4.834991e+00\n",
+       "GaussianNaiveBays  0.787097  0.783871  0.792208  1.156793e+06\n",
+       "SVC                0.767742  0.764516  0.779221  3.932640e+00\n",
+       "SVC-sigmoid        0.732258  0.622581  0.779221  3.644898e+00\n",
+       "SVC-poly           0.751613  0.745161  0.785714  3.926238e+00\n",
+       "RandomForest       1.000000  0.787097  0.818182           inf\n",
+       "AdaBoost           0.929032  0.777419  0.824675  2.229494e+00\n",
+       "NearestNeighbour   0.874194  0.777419  0.759740           inf\n",
+       "GaussianProcess    0.838710  0.787097  0.857143  6.741112e+00\n",
+       "QDA                0.848387  0.783871  0.779221  1.555342e+02\n",
+       "DecisionTree       0.916129  0.745161  0.772727           inf"
       ]
      },
      "execution_count": 9,
@@ -405,22 +381,6 @@
    "source": [
     "res"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e050c5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebcad430",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
